修改错误链接版

--- a/Baocms/Tpl/login/index.html
+++ b/Baocms/Tpl/login/index.html
@@ -18,7 +18,7 @@
         <div class="main_logon">
 
             <div class="login">
-                <div class="title">Baocms后台管理系统</div>
+                <div class="title">Highyanan后台管理系统</div>
 
                 <form method="post" action="<{:U('login/loging')}>" target="baocms_frm" >
 
