--- a/themes/default/Mobile/public/footer.html
+++ b/themes/default/Mobile/public/footer.html
@@ -11,7 +11,7 @@
         </a>
     </div>
     <div>
-        <a href="http://yanan.rztaiyang.com/mall"> 
+        <a href="http://highyanan.com/mall"> 
         <div <if condition="$ctl eq  'tuan'"> class="icon i-2 on"<else/>class="icon i-2"</if> ></div>
         <p>商城</p>
         </a>
